# bazel-examples

angular-ngc/: .bazelignore  WORKSPACE.bazel  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.node.json
angular-ngc/applications/demo/: BUILD.bazel
angular-ngc/applications/demo/app/: app.component.spec.ts  app.module.ts
angular-ngc/applications/sample-app/: BUILD.bazel  README.md  index.dev.html  index.prod.html  main.dev.ts  main.prod.ts  main.ts  package.json  polyfills.ts  rollup.config.js  rollup.legacy.config.js  styles.css  styles.scss
angular-ngc/applications/sample-app/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
angular-ngc/applications/sample-app/app/todo/: todo.component.ts  todo.effects.ts  todo.interface.ts  todo.module.ts
angular-ngc/applications/sample-app/assets/: BUILD.bazel
angular-ngc/applications/sample-app/src/: BUILD.bazel
angular-ngc/applications/sample-app/src-legacy/: BUILD.bazel
angular-ngc/applications/sample-app/src-legacy/app/: BUILD.bazel
angular-ngc/applications/sample-app/src-legacy/app/scripts/: BUILD.bazel  app.ts  routes.ts  run.ts
angular-ngc/applications/sample-app/src-legacy/app/scripts/modules/work_items/: BUILD.bazel  component.ts  index.ts
angular-ngc/applications/sample-app/src-legacy/app/scripts/pages/admin/: BUILD.bazel  component.ts  controller.ts  index.ts
angular-ngc/applications/sample-app/src-legacy/app/scripts/pages/home/: BUILD.bazel  component.ts  controller.ts  index.ts
angular-ngc/applications/sample-app/src-legacy/app/scripts/pages/settings/: BUILD.bazel  controller.ts  index.ts  settings.template.ts
angular-ngc/applications/sample-app/src-legacy/app/scripts/pages/user/: BUILD.bazel  controller.ts  index.ts  user.template.ts
angular-ngc/applications/sample-app/src-legacy/app/stylesheets/: BUILD.bazel  app.css.scss
angular-ngc/applications/sample-app/src-legacy/spec/support/: BUILD.bazel  fake_repositories.ts
angular-ngc/applications/sample-app/src/app/: BUILD.bazel  app-routing.module.ts  app.component.scss  app.component.ts  app.module.ts
angular-ngc/applications/sample-app/src/app/dashboard/: BUILD.bazel  dashboard.component.ts  dashboard.module.ts
angular-ngc/applications/sample-app/src/app/home/: BUILD.bazel  home.component.ts  home.module.ts
angular-ngc/applications/sample-app/src/app/infrastructure/: BUILD.bazel
angular-ngc/applications/sample-app/src/app/todo/: BUILD.bazel  todo.actions.ts  todo.component.ts  todo.interface.ts  todo.reducer.ts
