load("@npm//:defs.bzl", "npm_link_all_packages")
load("//:defs.bzl", "ng_application")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

# The Angular demo application
ng_application(
    name = "sample-app",
    test_deps = [
        ":node_modules/@intf/common",
    ],
    deps = [
        ":node_modules/@intf/components",
        ":node_modules/@intf/lib-a",
        "//:node_modules/@angular/forms",
        "//:node_modules/@angular/material",
        "//:node_modules/@angular/upgrade",
        "//:node_modules/@ngrx/effects",
        "//:node_modules/@ngrx/store",
        "//:node_modules/@ngrx/store-devtools",
    ],
)
