# package(default_visibility = ["//:__subpackages__"])

# load("@npm//@bazel/typescript:index.bzl", "ts_library")

# ts_library(
#     name = "app",
#     srcs = glob(
#         ["*.ts"],
#         exclude = ["spec.ts"],
#     ),
#     deps = [
#         "//projects/sample-app/src-legacy/app/scripts",
#     ],
# )
