package(default_visibility = ["//:__subpackages__"])

load("@npm//@angular/bazel:index.bzl", "ng_module")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

COMMON_DEPS = [
    "@npm//@angular/core",
    "@npm//@angular/common",
    "//packages/feature-flags",
]

ng_module(
    name = "dashboard",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    deps = COMMON_DEPS + [],
)

ts_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    deps = COMMON_DEPS + [
        ":dashboard",
        "@npm//@types/jasmine",
    ],
)
