package(default_visibility = ["//:__subpackages__"])

load("@npm//@angular/bazel:index.bzl", "ng_module")

COMMON_DEPS = [
    "@npm//@angular/core",
    "@npm//@angular/common",
    "@npm//@angular/upgrade",
    "@npm//@angular/router",
    "@npm//@angular/forms",
    "@npm//@angular/material",
]

ng_module(
    name = "home",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    deps = COMMON_DEPS + [],
)
