package(default_visibility = ["//:__subpackages__"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "work_items",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["spec.ts"],
    ),
    deps = [
        "//typings",
        "@npm//@types/node",
        "@npm//angular",
    ],
)

# ts_library(
#     name = "tests",
#     testonly = 1,
#     srcs = glob(["*spec.ts"]),
#     deps = [
#       ":work_items",
#       "@npm//@types/jasmine",
#       "//packages/testing",
#       "//projects/sample-app/src-legacy/spec/support"
#     ]
# )
#
# karma_web_test(
#     name = "test",
#     deps = [
#       ":tests",
#       "@npm//angular:angular__umd",
#       "@npm//angular-mocks:angular-mocks__umd",
#       "//projects/sample-app/src-legacy:umd",
#     ],
# )
